# Cadence

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: coverage.yml
Cadence/: Matrix.h  MatrixTranspose.h  Transform.h  Vector.h
doc/: CMakeLists.txt  Doxyfile.in  api.rst  index.rst
src/: main.cpp
test/: CMakeLists.txt  test_Matrix.cpp  test_Transform.cpp  test_Vector.cpp  test_vector.cpp
